--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   charts_flutter: ^0.12.0
   syncfusion_flutter_charts: ^19.4.41
+  http: ^0.13.4
+  
 
 
 dev_dependencies:
